objects/LAT_BI_Contract__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BI_CD_CONTRACT__c</fullName>
        <label>CD CONTRACT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DS_STATUS_CONTRACT__c</fullName>
        <label>DS STATUS CONTRACT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DT_CANCEL_CONTRACT__c</fullName>
        <label>DT CANCEL CONTRACT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DT_END_CONTRACT__c</fullName>
        <label>DT END CONTRACT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BI_DT_START_CONTRACT__c</fullName>
        <label>DT START CONTRACT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BI_MONTH_YEAR_CANCEL_CONTRACT__c</fullName>
        <label>MONTH YEAR CANCEL CONTRACT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_MONTH_YEAR_END_CONTRACT__c</fullName>
        <label>MONTH YEAR END CONTRACT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_MONTH_YEAR_START_CONTRACT__c</fullName>
        <label>MONTH YEAR START CONTRACT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_QT_MONTH_DURATION__c</fullName>
        <label>QT MONTH DURATION</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BI_ROI__c</fullName>
        <label>ROI</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>LAT BI Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_CD_CONTRACT__c</columns>
        <columns>LAT_BI_DS_STATUS_CONTRACT__c</columns>
        <columns>LAT_BI_DT_CANCEL_CONTRACT__c</columns>
        <columns>LAT_BI_DT_START_CONTRACT__c</columns>
        <columns>LAT_BI_MONTH_YEAR_START_CONTRACT__c</columns>
        <columns>LAT_BI_MONTH_YEAR_END_CONTRACT__c</columns>
        <columns>LAT_BI_DT_END_CONTRACT__c</columns>
        <columns>LAT_BI_QT_MONTH_DURATION__c</columns>
        <columns>LAT_BI_MONTH_YEAR_CANCEL_CONTRACT__c</columns>
        <columns>LAT_BI_ROI__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LAT_BI_Contracts_IT</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_CD_CONTRACT__c</columns>
        <columns>LAT_BI_DS_STATUS_CONTRACT__c</columns>
        <columns>LAT_BI_DT_CANCEL_CONTRACT__c</columns>
        <columns>LAT_BI_DT_START_CONTRACT__c</columns>
        <columns>LAT_BI_MONTH_YEAR_START_CONTRACT__c</columns>
        <columns>LAT_BI_MONTH_YEAR_END_CONTRACT__c</columns>
        <columns>LAT_BI_DT_END_CONTRACT__c</columns>
        <columns>LAT_BI_QT_MONTH_DURATION__c</columns>
        <columns>LAT_BI_MONTH_YEAR_CANCEL_CONTRACT__c</columns>
        <columns>LAT_BI_ROI__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_BI_CD_CONTRACT__c</field>
            <operation>equals</operation>
            <value>CON-023035,CON-020979,CON-023032</value>
        </filters>
        <label>LAT BI Contracts IT</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>LAT_BIContract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT BI Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>